crates/swc_ecma_parser/tests/test262-error-references/fail/0c7d4912f3869297.js.stderr
error: Expected 4 hex characters
 --> $DIR/tests/test262-parser/fail/0c7d4912f3869297.js:1:1
  |
1 | \u12
  | ^^^^

